--- a/src/styles/Tile.less
+++ b/src/styles/Tile.less
@@ -1,7 +1,9 @@
 .Tile {
-  border: 1px dashed #f00;
-  width: 100px;
-  height: 100px;
+  width: 20%;
+  height: 0;
+  padding: 10% 0%;
   color: white;
+  border: 1px dashed #f00;
   display: inline-block;
+  box-sizing: border-box;
 }
