--- a/src/styles/TilesRow.less
+++ b/src/styles/TilesRow.less
@@ -1,4 +1,6 @@
 .TilesRow {
-  border: 1px dashed #f00;
-  display: block;
+  display: inline-block;
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: -3px;
 }
