--- a/src/styles/Tile.less
+++ b/src/styles/Tile.less
@@ -2,8 +2,8 @@
   width: 20%;
   height: 0;
   padding: 10% 0%;
-  color: white;
-  border: 1px dashed #f00;
+  background-color: white;
+  border: 1px solid gray;
   display: inline-block;
   box-sizing: border-box;
 }
